# panda_gazebo_sim

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml
assets/: ros_entrypoint.sh
assets/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
assets/catkin_ws/src/panda_description/: CMakeLists.txt  models.config  package.xml
assets/catkin_ws/src/panda_description/urdf/: README.md
assets/catkin_ws/src/panda_gazebo/: CMakeLists.txt  package.xml
assets/catkin_ws/src/panda_gazebo/config/: panda.rviz  panda_control.yaml
assets/catkin_ws/src/panda_gazebo/launch/: panda.launch  panda_gazebo.launch  panda_moveit.launch  panda_rviz.launch
assets/catkin_ws/src/panda_gazebo/worlds/: cam_pos.world  legibility.world  legibility_no_video.world  panda.world
assets/catkin_ws/src/panda_moveit/: .setup_assistant  CMakeLists.txt  package.xml
assets/catkin_ws/src/panda_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  panda.srdf  panda_controllers.yaml  ros_controllers.yaml
assets/catkin_ws/src/panda_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
assets/panda_xacro/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
scripts/: deep_legibility.py  dragan_trajectory.npy  generate_dragan_trajectory.ipynb  initial_trajectory.npy  move_start.py  move_to.py  named_keyframes.json  optimized_trajectory.npy  reset.py
